--- a/source/_posts/R_3.md
+++ b/source/_posts/R_3.md
@@ -9,10 +9,8 @@ date: '2022-06-20'
 
 06.20 오전강의
 -
-# 제3장 데이터의 구조
-  1. 용어의 이해 (36p~42p)
-  2. 데이터 구조 (42p~56p)
-
+제3장 데이터의 구조
+-
 ### 벡터의 종류 (42p~47p)
 - 벡터 (vector): 1차원의 집합이며, 같은 속성으로만 묶인다
   1. 숫자형 벡터: 실수로(소수점, 정수 무리수 등 모든 수) 4칙연산 가능, 연속형 데이터
