--- a/source/_posts/R_6.md
+++ b/source/_posts/R_6.md
@@ -9,18 +9,18 @@ date: '2022-06-21'
 
 06.21 오후강의
 -
-# 제6장 데이터 가공 (분석 프로세스)
-  1. 데이터 전처리 (98p)
-  2. 변수이름 바꾸기: rename() (99p)
-  3. 빈도분석: count() (100p)
-  4. 데이터세트에서 일부 열을 추출하기: select() (101p)
-  5. 데이터세트에서 행 추출하기: slice(),filter() (105p)
-  6. 파생변수 만들기: mutate() (119p)
-  7. 집단별 통계량 구하기: group_by(),summarise(),n() (121p)
-  8. 연속 데이터로 범주변수 만들기: mutate() + ifelse() (130p)
-  9. 데이터 정렬하기: arrange() (135p)
-  10.데이터 결합하기 (138p)
-  11.알아두면 유용한 함수 (145p)
+제6장 데이터 가공 (분석 프로세스)
+-
+### 자율학습
+- [5장 데이터 변환](https://r4ds.had.co.nz/transform.html)
+- 코드 위주로 다 쳐보기
+```{r}
+# 설치해야되는 패키지들
+# install.packages("nycflights13")
+# install.packages("tidyverse")
+# library(nycflights13)
+# library(tidyverse)
+```
 
 ### 1. 데이터 전처리 (98p)
 - 데이터 전처리를 위한 도구(패키지) 2가지 차이
