--- a/source/_posts/R_3.md
+++ b/source/_posts/R_3.md
@@ -2,20 +2,24 @@
 title: "R을 이용한 공공데이터 분석_제3장"
 output:
   html_document:
+    toc: true
+    toc_float: true
     keep_md: true
 date: '2022-06-20'
 ---
 
 
-06.20 오전강의
--
+
 제3장 데이터의 구조
 -
-### 벡터의 종류 (42p~47p)
+# 1단원 벡터의 종류 (42p~47p)
 - 벡터 (vector): 1차원의 집합이며, 같은 속성으로만 묶인다
-  1. 숫자형 벡터: 실수로(소수점, 정수 무리수 등 모든 수) 4칙연산 가능, 연속형 데이터
-  2. 정수형 벡터: 숫자형 벡터 中 정수(-1,0,1)로만 구성, 이산형 데이터
-  3. 문자형 벡터: 연산 불가
+
+## 1. 숫자형 벡터: 실수로(소수점, 정수 무리수 등 모든 수) 4칙연산 가능, 연속형 데이터
+
+## 2. 정수형 벡터: 숫자형 벡터 中 정수(-1,0,1)로만 구성, 이산형 데이터
+
+## 3. 문자형 벡터: 연산 불가
 
 ```r
 char_vector <- c("Hi", "Hello")
@@ -38,8 +42,11 @@ class(char_vector) # 벡터의 유형을 알 수 있다.
 ```r
 #character=char=문자
 ```
-  4. 범주형 벡터: 데이터가 일정 범위나 기준에 따라 유형(성별, 연령대)으로 분류되는 벡터, 이 때 유형을 레벨(level)이라고 한다
-- 4.1. 명목형 자료형 벡터 : 데이터 값 비교 불가
+
+## 4. 범주형 벡터
+- 데이터가 일정 범위나 기준에 따라 유형(성별, 연령대)으로 분류되는 벡터, 이 때 유형을 레벨(level)이라고 한다
+
+### 4.1. 명목형 자료형 벡터 : 데이터 값 비교 불가  (책X)
 
 ```r
 locaiton_vector <- c("서울", "인천", "부산")
@@ -67,7 +74,8 @@ help(factor)
 ```
 ## httpd 도움말 서버를 시작합니다 ... 완료
 ```
-- 4.2. 순서형 자료형 벡터 : 데이터 값 순서 지정
+
+### 4.2. 순서형 자료형 벡터 : 데이터 값 순서 지정  (책X)
 
 ```r
 temperature_factor <- c("기온높음", 
@@ -113,7 +121,8 @@ class(factor_location_vector) # 비서열
 ```
 ## [1] "factor"
 ```
-  5. 논리형 벡터: 참(TRUE),거짓(FALSE) 논리값으로 구성된 베이터. 논리값은 따옴표 없이 대문자로 쓴다
+
+## 5. 논리형 벡터: 참(TRUE),거짓(FALSE) 논리값으로 구성된 베이터. 논리값은 따옴표 없이 대문자로 쓴다
 
 ```r
 logical_vector <- c(TRUE, FALSE)
@@ -131,8 +140,10 @@ class(logical_vector)
 ```
 ## [1] "logical"
 ```
-  * 벡터는 함상 범주가 같아야한다.
-  * 만약 속성이 서로 다르다면 상위 속성으로 강제변환 되며 이를 Coercion이라 부름. (논리형 ☞ 숫자형 ☞ 문자형)
+
+## 6. 벡터 사용 주의 사항
+- 벡터는 함상 범주가 같아야한다.
+- 만약 속성이 서로 다르다면 상위 속성으로 강제변환 되며 이를 Coercion이라 부름. (논리형 ☞ 숫자형 ☞ 문자형)
 
 ```r
 a <- c(1,2) #a의 유형은 숫자
@@ -178,7 +189,7 @@ c #문자가 아니기 때문에 ""표시가 없음
 ```
 
 
-### 행렬 (47p) 
+# 2단원 행렬 (47p) 
 - 행렬 (Matrix): 행과 열을 갖는 2차원의 구조로, 같은 속성으로만 묶인다
 - 행은 가로 데이터, 열은 세로 데이터
 - 행은 데이터프레임에 들어있는 개별 데이터. R에서는 행을 관측치(observation 약칭 obs.)라고 표현한다.
@@ -186,7 +197,7 @@ c #문자가 아니기 때문에 ""표시가 없음
 - 데이터 분석은 기본적으로 열을 구성하는 변수들의 특성이나 변수 간 관계 등을 알아보는 것.
 
 
-### 데이터프레임 (47p~54p)
+# 3단원 데이터프레임 (47p~54p)
 - 데이터프레임 (data.frame): 행과 열을 갖는 2차원의 구조로, 다른 속성도 묶인다
 
 ```r
@@ -269,5 +280,5 @@ str(exam)
 ```
 
 
-### 리스트 (55p~56p)
+# 4단원 리스트 (55p~56p)
 - 리스트(list): 가장 광범위한 객체로써, 벡터, 행렬, 데이터프레임, 리스트도 묶는다
