--- a/source/_posts/R_6.md
+++ b/source/_posts/R_6.md
@@ -2,19 +2,21 @@
 title: "R을 이용한 공공데이터 분석_제6장"
 output:
   html_document:
+    toc: true
+    toc_float: true
     keep_md: true
 date: '2022-06-21'
 ---
 
 
-06.21 오후강의
--
+
 제6장 데이터 가공 (분석 프로세스)
 -
-### 자율학습
+# 0단원 자율학습
 - [5장 데이터 변환](https://r4ds.had.co.nz/transform.html)
 - 코드 위주로 다 쳐보기
-```{r}
+
+```r
 # 설치해야되는 패키지들
 # install.packages("nycflights13")
 # install.packages("tidyverse")
@@ -22,7 +24,7 @@ date: '2022-06-21'
 # library(tidyverse)
 ```
 
-### 1. 데이터 전처리 (98p)
+# 1단원 데이터 전처리 (98p)
 - 데이터 전처리를 위한 도구(패키지) 2가지 차이
 - dplyr : 10GB 이내, 매우 쉬움
 - data.table : 50GB, 어려움
@@ -51,7 +53,7 @@ library(dplyr)
 ```
 
 ```r
-mpg1 <-read.csv("mpg1.csv", stringsAsFactors = F)
+  mpg1 <-read.csv("data/mpg1.csv", stringsAsFactors = F)
 
 # 99p 방법1, 방법2 차이 설명
 # %>% : 파이프 연산자 pipe operator
@@ -76,22 +78,23 @@ data3 <-select(mpg1, drv, cty, hwy)
 data3 <-filter(data3, drv =="f")
 ```
 
-### 중요도 높은 함수들
+# 중요도 높은 함수들
 - 4.select : 컬럼명 추출
 - 5.filter : 행 추출 (조건식)
 - 6.mutate : 파생변수, 데이터 분석에 있어 중요함. 기존에 있던 데이터에서 변수를 새로 만듬. ex.총매출액, 영업이익
 - 7.group by 와 7.summarise()는 함께간다 : 비교를 해야 데이터가 의미가 있음
 
-### 2. rename()
+# 2단원 rename()
 - 이름 바꾸기, 변수 이름을 한 번에 여러개 바꿀 수 있음.
 
-### 3. count()
+# 3단원 count()
 - count() = table(): 데이터세트의 '범주형 변수'에서 범주들의 빈도를 센다.
 
-### 4. select()
+# 4단원 select()
 - 데이터세트의 열 추출/삭제하여 새로운 객체를 만들 때 사용.
 - 데이터세트의 용량이 너무 많으면 X, 필요한 열만 추출하여 분석
-1) 필요한 열을 추출하기
+
+## 1. 필요한 열을 추출하기
 
 ```r
 # 방법1
@@ -110,7 +113,7 @@ str(mpg1_1)
 # 방법2
 mpg1_2 <-select(mpg1,manufacturer,trans,cty)
 ```
-  2) 불필요한 열 삭제 후 필요한 열만 남기기
+## 2. 불필요한 열 삭제 후 필요한 열만 남기기
 
 ```r
 # 방법1
@@ -134,8 +137,8 @@ mpg1_type3 <-select(mpg1,-cty,-hwy)
 mpg1_type4 <-select(mpg1,-c(cty,hwy))
 ```
 
-### 5. slice(),filter()
-  1) slice(): 행의 일부를 추출하기
+# 5단원 slice(),filter()
+## 1. slice(): 행의 일부를 추출하기
 
 ```r
 # 방법1
@@ -160,10 +163,10 @@ slice(mpg1,1,4,5)
 ## 2         audi  auto   f  21  30
 ## 3         audi  auto   f  16  26
 ```
-  2) filter(): 조건에 맞는 행을 추출하기
+## 2. filter(): 조건에 맞는 행을 추출하기
 
 
-2)1) 비교값이 같은 데이터 추출
+### 2.1. 비교값이 같은 데이터 추출
 
 ```r
 # 방법1 
@@ -209,7 +212,7 @@ mpg1 %>%filter(cty==max(cty))
 ```
 * '=': 지정하거나 입력, '==':비교해서 같다
 
-2)2) 비교값이 다른 데이터 추출
+### 2.2. 비교값이 다른 데이터 추출
 
 ```r
 # 방법1
@@ -219,9 +222,9 @@ mpg1_no_hd2 <-filter(mpg1,manufacturer!="hyundai")
 ```
 * '=!': 같지 않다
 
-2)3) 비교값이 크거나 작은 데이터 추출
+### 2.3. 비교값이 크거나 작은 데이터 추출
 
-    2)3)1) 비교값이 작은(<) 데이터 추출
+#### 2.3.1. 비교값이 작은(<) 데이터 추출
 
 ```r
 mean(mpg1$cty) # cty의 평균 구하기
@@ -239,7 +242,7 @@ mpg1_low2 <-filter(mpg1,cty<16.85897)
 # 방법3
 mpg1_low3 <-mpg1 %>% filter(cty<mean(cty))
 ```
-    2)3)2) 비교값이 작거나 같은(<=) 데이터 추출
+#### 2.3.2. 비교값이 작거나 같은(<=) 데이터 추출
 
 ```r
 quantile(mpg1$cty) #1사분위수 알아보기
@@ -256,7 +259,7 @@ mpg1_low4 <-mpg1 %>% filter(cty<=14)
 # 방법2
 mpg1_low5 <-filter(mpg1,cty<=14)
 ```
-    2)3)3) 비교값이 큰(>) 데이터 추출
+#### 2.3.3. 비교값이 큰(>) 데이터 추출
 
 ```r
 median(mpg1$cty) #중앙값 구하기기
@@ -274,7 +277,7 @@ mpg1_hight2 <-filter(mpg1,cty>17)
 # 방법3
 mpg1_hight3 <-mpg1 %>% filter(cty>median(cty))
 ```
-    2)3)4) 비교값이 크거나 같은(>=) 데이터 추출
+#### 2.3.4. 비교값이 크거나 같은(>=) 데이터 추출
 
 ```r
 quantile(mpg1$cty)
@@ -291,9 +294,9 @@ mpg1_hight4 <-mpg1 %>% filter(cty>=19)
 # 방법2
 mpg1_hight5 <-filter(mpg1,cty>=19)
 ```
-2)4) 복수의 조건을 충족하는 데이터 추출
+### 2.4. 복수의 조건을 충족하는 데이터 추출
 
-    2)4)1) 조건이 2개일 때
+#### 2.4.1. 조건이 2개일 때
 
 ```r
 # mpg1에서 manufacturer가 hyundai이면서 cty가 모든 자동차의 평균 이상인 데이터를 추출하기
@@ -313,7 +316,7 @@ mpq1_hd4 <-filter(mpg1,manufacturer=="hyundai"&cty>=16.85897)
 # 방법3
 mpq1_hd5 <-mpg1 %>% filter(manufacturer=="hyundai"&cty>=mean(cty))
 ```
-    2)4)2) 조건이 3개일 때
+#### 2.4.2. 조건이 3개일 때
 
 ```r
 # mpg1의 manufacturer가 hyundai이면서, trans가 auto이고, cty가 전체 자동차의 중앙값 이상인 데이터를 추출하기
@@ -333,7 +336,8 @@ mpq1_hd7 <-filter(mpg1,manufacturer=="hyundai"&trans=="auto"&cty>=17)
 # 방법3
 mpq1_hd8 <-mpg1 %>% filter(manufacturer=="hyundai"&trans=="auto"&cty>=median(mpg1$cty))
 ```
-2)5 복수 조건 중 하나라도 충족하는 데이터 추출
+
+### 2.5. 복수 조건 중 하나라도 충족하는 데이터 추출
 
 ```r
 #mpg1에서 일본 자동차들의 데이터만 추출해서 새로운 객체에 입력하기
@@ -350,7 +354,7 @@ mpg1_j3 <-mpg1 %>% filter(manufacturer %in% c("honda","nissan","subaru","toyota"
 * shift+\ = '|': 여러 조건 중 하나만 충족되면 조건에 해당하는 데이터를 모두 추출
 * '%in% c()': c()안에 있는 것을 모두 포함한다.
 
-2)6 열을 추출한 후에 조건에 맞는행을 추출하기
+### 2.6. 열을 추출한 후에 조건에 맞는행을 추출하기
 
 ```r
 # mpg1에서 manufactrer,cty 열을 추출한 후에 manufacturer가 hyundai인 자동차 중에 cty가 전체 평균 이상인 데이터를 추출해서 새로운 객체 mpg1_hd9에 입력한다.
@@ -367,8 +371,8 @@ mpg1_hd9 <-mpg1 %>%  #새 객체에 입력
   select(manufacturer,cty) %>% #2개 변수 추출
   filter(manufacturer=="hyundai"&cty>=16.85897) #조건부여해서 행 추출
 ```
-### 6. mutate()
-  1) 1개의 파생변수 만들기
+# 6단원 mutate()
+## 1. 1개의 파생변수 만들기
 
 ```r
 # mpg1에는 cty(도시에서의 연비)와 hwy(고속도로에서의 연비) 변수가 있습니다. 
@@ -389,7 +393,7 @@ str(mpg2)
 ##  $ hwy         : int  29 29 31 30 26 26 27 26 25 28 ...
 ##  $ total       : int  47 50 51 51 42 44 45 44 41 48 ...
 ```
-  2) 복수의 파생변수 만들기
+## 2. 복수의 파생변수 만들기
 
 ```r
 # total 변수(cty+hwy)와 mean 변수((cty+hwy)/2)를 동시에 만들어 새로운 객체 mpg3에 입력한다.
@@ -411,7 +415,7 @@ str(mpg3)
 ##  $ total       : int  47 50 51 51 42 44 45 44 41 48 ...
 ##  $ mean        : num  23.5 25 25.5 25.5 21 22 22.5 22 20.5 24 ...
 ```
-  3) 강의 내용
+## 3. 강의 내용
 
 ```r
 glimpse(iris) # glimpse()=str(): 데이터 미리보기
@@ -520,17 +524,18 @@ iris %>%
 ## $ total        <dbl> 8.6, 9.3, 9.1, 9.8, 10.1, 9.3, 8.6, 9.5, 8.9, 8.8, 8.8, 8…
 ```
 
-### 7. group_by(),summarise(),n()
+# 7단원 group_by(),summarise(),n()
 - 집단별 통계량 : '집단으로 쪼개고(split), 집단별로 적용하고(apply), 결과를 합쳐서(combine)' 분석하는 방식
 - group by 와 summarise()는 함께간다. 비교를 해야 데이터가 의미가 있음
-  1) 집단 분류 group_by()
-  - group_by() 함수의 ()안에 '범주형 변수'의 이름을 적으면 행을 범주별로 분류한다.
-  - ex.
-  - mpg1의 trans 변수는 auto와 manual 2개 범주로 구성
-  - group_by(trans)를 하면 모든 행을 auto와 manual로 분류함.
+
+## 1. 집단 분류 group_by()
+- group_by() 함수의 ()안에 '범주형 변수'의 이름을 적으면 행을 범주별로 분류한다.
+- ex.
+- mpg1의 trans 변수는 auto와 manual 2개 범주로 구성
+- group_by(trans)를 하면 모든 행을 auto와 manual로 분류함.
   
-  2) 집단의 통계 구하기 summarise()
-  - 집단별로 통계값을 구할 때 사용하는 함수.
+## 2. 집단의 통계 구하기 summarise()
+- 집단별로 통계값을 구할 때 사용하는 함수.
   
 
 ```r
@@ -567,9 +572,9 @@ mpg1 %>% summarise(mean(cty),sum(cty),median(cty)) # 변수 이름 미지정정
 ##   mean(cty) sum(cty) median(cty)
 ## 1  16.85897     3945          17
 ```
-  3) 집단으로 분류해서 집단별 통계 구하기
+## 3. 집단으로 분류해서 집단별 통계 구하기
 
-3)1) 1개 변수를 집단 분류해서 통계 구하기: group_by(변수)+summarise
+### 3.1. 1개 변수를 집단 분류해서 통계 구하기: group_by(변수)+summarise
 - 데이터를 집단으로 분류한 후, 집단별로 통계를 구할 수 있음.
 
 ```r
@@ -609,7 +614,7 @@ mpg1 %>%
 ##          m
 ## 1 18.67532
 ```
-3)2) 복수 변수를 집단 분류해서 통계 구하기: group_by(변수1,변수2,...)+summarise
+### 3.2. 복수 변수를 집단 분류해서 통계 구하기: group_by(변수1,변수2,...)+summarise
 
 ```r
 mpg1 %>% 
@@ -673,9 +678,9 @@ mpg1 %>%
 ## 5 r     auto    13.3
 ## 6 r     manual  15.8
 ```
-  4) 집단별 빈도와 비율 구하기
+## 4. 집단별 빈도와 비율 구하기
 
-4)1) 분류 집단별 데이터 빈도 구하기:group_by(변수)+summarise(n()함수)
+### 4.1. 분류 집단별 데이터 빈도 구하기:group_by(변수)+summarise(n()함수)
 - 'n()': 집단의 데이터 숫자를 세어 빈도를 알려주는 함수.
 
 ```r
@@ -716,7 +721,7 @@ mpg1 %>%
 ## 5 manual f        41  21.3
 ## 6 manual r         8  15.8
 ```
-4)2) 분류한 집단별 빈도와 비율 구하기:group_by()+summarise(n()) + mutate()의 조합
+### 4.2. 분류한 집단별 빈도와 비율 구하기:group_by()+summarise(n()) + mutate()의 조합
 
 ```r
 mpg1 %>% 
@@ -733,7 +738,7 @@ mpg1 %>%
 ## 1 auto     157   234  67.1
 ## 2 manual    77   234  32.9
 ```
-  5) 강의 내용
+## 5. 강의 내용
 
 ```r
 mpg1 %>% 
@@ -755,7 +760,8 @@ mpg1 %>%
 ```r
 # 피버테이블을 만듬.
 ```
-### 이하는 읽고 넘어가기
+
+# 8~11단원은 읽고 넘어가기
 - 8. mutate() + ifelse() 연속 데이터로 범주변수 만들기
 - 9. arrange()데이터 정렬하기
 - 10.데이터 결합하기
