--- a/source/_posts/R_4.md
+++ b/source/_posts/R_4.md
@@ -2,14 +2,16 @@
 title: "R을 이용한 공공데이터 분석_제4장"
 output:
   html_document:
+    toc: true
+    toc_float: true
     keep_md: true
 date: '2022-06-20'
 ---
 
 
-06.20 오후강의
+
+제4장 데이터 내보내기 & 불러오기
 -
-# 제4장 데이터 내보내기 & 불러오기
 
 ```r
 # 엑셀 데이터
@@ -89,7 +91,7 @@ str(exam)
 ##  $ sex   : chr  "male" "female" "male" "male" ...
 ##  $ korean: num  87 92 95 81 87
 ```
-### 경로
+# 1. 경로
 
 ```r
 getwd()
@@ -109,21 +111,21 @@ getwd()
 ```
 
 ```r
-write.csv(x = exam, file = "temp.csv")
+write.csv(x = exam, file = "data/temp.csv") # 위에 만든 엑셀데이터 exam을 temp.csv를 만들어 적어라
 ```
 - 바탕화면에 dataset 폴더 생성, exam 객체 저장하세요
 - 데이터 불러오기
 
 ```r
-temp = read.csv("temp.csv")
+temp = read.csv("data/temp.csv")
 #temp = read.csv("dataset/temp.csv") 
 #직전 상위 파일을 workdirectory로 지정하고 "폴더명/파일명"으로도 불러오기 가능
-write.csv(x = exam, file = "exam.csv") #데이터프레임을 cvs파일로 저장
+write.csv(x = exam, file = "data/exam.csv") #데이터프레임을 cvs파일로 저장
 ```
 - R에서 예제파일 exam.csv를 객체 exam으로 입력해서 설명함. (51p)
 
 ```r
-exam = read.csv("exam.csv") #csv파일을 데이터프레임으로 읽기
+exam = read.csv("data/exam.csv") #csv파일을 데이터프레임으로 읽기
 getwd()
 ```
 
@@ -142,7 +144,7 @@ library(ggplot2)
 economics <- ggplot2::economics
 ```
 
-### 외부 데이터 불러오기
+# 2. 외부 데이터 불러오기
 
 - 여기서 잠깐 (66p)
 - 실무 패키지 (분량이 많은 데이터를 불러올 때는 read.csv()보다 fread() 함수를 이용하는게 더 좋다.)
@@ -152,13 +154,13 @@ economics <- ggplot2::economics
 library(data.table)  #공식문서 확인
 ```
 
-#### 엑셀파일 불러오기
+## 엑셀파일 불러오기
 
 
 ```r
 #install.packages("readxl")
 library(readxl)
-read_excel("student1_xl.xlsx")
+read_excel("data/student1_xl.xlsx")
 ```
 
 ```
@@ -172,7 +174,7 @@ read_excel("student1_xl.xlsx")
 - (3) 설명 (67p)
 
 ```r
-read.csv("student1.csv")
+read.csv("data/student1.csv")
 ```
 
 ```
@@ -183,7 +185,7 @@ read.csv("student1.csv")
 ```
 
 ```r
-read.csv("student1.csv", skip = 1)
+read.csv("data/student1.csv", skip = 1)
 ```
 
 ```
@@ -195,7 +197,7 @@ read.csv("student1.csv", skip = 1)
 - (4) 설명_엑셀 파일에 있는 복수의 시트에서 특정시트 불러오기 (68p)
 
 ```r
-read_excel("student1_xl.xlsx") # 첫번째 시트 불러오기
+read_excel("data/student1_xl.xlsx") # 첫번째 시트 불러오기
 ```
 
 ```
@@ -207,7 +209,7 @@ read_excel("student1_xl.xlsx") # 첫번째 시트 불러오기
 ```
 
 ```r
-read_excel("student1_xl.xlsx", sheet =2) # 두번째 시트 불러오기
+read_excel("data/student1_xl.xlsx", sheet =2) # 두번째 시트 불러오기
 ```
 
 ```
@@ -217,18 +219,20 @@ read_excel("student1_xl.xlsx", sheet =2) # 두번째 시트 불러오기
 ## 1     1 male     13.2    12
 ## 2     2 female   17.8     5
 ```
-#### txt파일 불러오기 (69p)
+## txt파일 불러오기 (69p)
+
+
 ```r
 #read.table()
 ```
 
-#### SPSS파일 불러오기 (73p)
+## SPSS파일 불러오기 (73p)
 
 ```r
 #install.packages("foreign")
 library(foreign)
 ?read.spss()  #.sav 파일 읽어주는 함수
-student <- read.spss("student.sav")
+student <- read.spss("data/student.sav")
 ```
 
 ```
