--- a/source/_posts/R_7.md
+++ b/source/_posts/R_7.md
@@ -2,17 +2,17 @@
 title: "R을 이용한 공공데이터 분석_제7장"
 output:
   html_document:
+    toc: true
+    toc_float: true
     keep_md: true
 date: '2022-06-22'
 ---
 
 
 
-06.22 오전강의
--
 제7장 결측치, 이상치 처리
 -
-### 결측치 (158p)
+# 1단원 결측치 (158p)
 - 결측치(결측값)이란? 데이터가 비어 있는 경우, 빈칸으로 둔다. 이를 결측치(결측값)이라고 한다. 
 - 데이터 분석을 할 때는 반드시 분석 전에 결측치를 처리해야 한다.
 - 전체 데이터에 있는 결측치 비율이 높으면 결과가 외곡 될 수 있기에 그 데이터를 분석해서는 안된다.
@@ -22,7 +22,7 @@ date: '2022-06-22'
 - 통계는 실험이다!! 분석가는 설득을 해야한다. 
 - 여러 분석 방법을 실험해 보고 가장 정확도가 높은 분석 방법을 사용하여 최종결정자를 설득 해야 한다.
 
-0. 라이브러리 불러오기
+## 0. 라이브러리 불러오기
 
 ```r
 library(dplyr)
@@ -46,10 +46,10 @@ library(dplyr)
 ```
 
 
-1. 결측치를 확인하고 빈도구하기
+## 1. 결측치를 확인하고 빈도구하기
 - R에서는 결측치를 NA로 표시한다.
 
-1.1. is.na(): 결측치 확인
+### 1.1. is.na(): 결측치 확인
 
 ```r
 exam_na <- read.csv("data/exam_na.csv") # 하위 경로 적어주기
@@ -59,7 +59,8 @@ is.na("exam_na.csv") # Is this yours? 결측치가 있니? 없니?
 ```
 ## [1] FALSE
 ```
-1.2. table(is.na()) : 결측치 빈도구하기
+
+### 1.2. table(is.na()) : 결측치 빈도구하기
 
 - table() : 빈도 구하기
 - table(is.na(데이터세트)) : 데이터세트의 결측치 '전체 빈도' 구하기
@@ -116,11 +117,11 @@ summary(exam_na)
 ##  Max.   :5                      Max.   :95.00   Max.   :95.00   Max.   :93.0  
 ##                                 NA's   :1       NA's   :2
 ```
-2. 결측치 처리방법
+
+## 2. 결측치 처리방법
 - 결측치는 '제거하고 처리'하기보다 > '다른 값으로 대체'하는게 더 중요하다.
 
-2.1. 결측치를 제외하고 분석하기
-
+### 2.1. 결측치를 제외하고 분석하기
 - 1 na.rm = T (T-제거X. F-제거O) : 연산함수에서 결측치를 제외하는 명령
 - 2 na.omit() : 결측치가 있는 행을 모두 제외하기 *가급적 사용하지 말기
 - 3 filter(!is.na()) : filter() 함수로 결측치가 없는 행만 추출하기
@@ -179,21 +180,20 @@ exam_na %>% filter(!is.na(korean))
 # filter(!is.na()) : 결측치가 아닌 행만 추츨해라.
 # exam_na의 korean 변수에서 결측치가 아닌 행만 추출
 ```
-2.2. 결측치를 다른 값으로 대체하기
+
+### 2.2. 결측치를 다른 값으로 대체하기
 - 결측치 대체법(imputation)
 - 대체값으로 평균값이 많이 쓰이지만 특정 값의 빈도가 매우 많을 때는 최빈값으로 대체한다. table() 함수 활용. 결측치를 대체할 때는 ifelse()함수 사용.
 - 참고자료 [A Solution to Missing Data: Imputation Using R](https://www.kdnuggets.com/2017/09/missing-data-imputation-using-r.html)
-
 - [R 결측값(NA) 제거, 대체 방법](https://velog.io/@lifeisbeautiful/R-%EA%B2%B0%EC%B8%A1%EA%B0%92NA-%EC%A0%9C%EA%B1%B0-%EB%8C%80%EC%B2%B4-%EB%B0%A9%EB%B2%95)
 
-### 이상치 (163p)
-1. 이상치의 개념
+# 2단원 이상치 (163p)
+## 1. 이상치의 개념
 - 데이터의 특정 값이 뭔가 '이상'이 있다. (ex.오타)
 - Case 1 : 정해진 범주에서 벗어난 데이터 (ex.2000.04.30/2000.40.30 ->9999로 대체)
 - Case 2 : 숫자, 아웃라이어(Outlier), 극단값 (ex.평균: 평균임금 320만원/손흥민 몇십억원, 평균의 함정)
 
-2. 이상치 처리
-
+## 2. 이상치 처리
 
 ```r
 mpg1_out <- read.csv("data/mpg1_out.csv")
@@ -480,7 +480,7 @@ mpg1_out %>% filter(!is.na(trans))
 # 굳이 3을 결측치로 전환하지 않고 filter() 함수를 바로 사용하는 방법도 있다.
 ```
 
-3. 극단치 처리
+## 3. 극단치 처리
 - 숫자 데이터 boxplot()
 - boxplot() 함수를 통해서 극단치가 있는지 없는지 확인 가능
 - IQR : 3사분위 - 1사분위
@@ -500,7 +500,7 @@ boxplot(mpg1$cty)
 boxplot(mpg1$cty)$stats
 ```
 
-![](R_7_files/figure-html/unnamed-chunk-6-1.png)<!-- -->
+![](images/R_7_files/figure-html/unnamed-chunk-6-1.png)<!-- -->
 
 ```
 ##      [,1]
@@ -515,7 +515,7 @@ boxplot(mpg1$cty)$stats
 boxplot(mpg1$cty~mpg1$drv)$stats
 ```
 
-![](R_7_files/figure-html/unnamed-chunk-6-2.png)<!-- -->
+![](images/R_7_files/figure-html/unnamed-chunk-6-2.png)<!-- -->
 
 ```
 ##      [,1] [,2] [,3]
@@ -525,22 +525,3 @@ boxplot(mpg1$cty~mpg1$drv)$stats
 ## [4,]   16   21   15
 ## [5,]   20   25   18
 ```
-
-
-
-
-
-
-
-
-```r
-# Rmd 파일 knit 결과 view panel에 미리 보여주는 코드
-# 패키지 설치
-# install.packages("remotes")
-# remotes::install_github('yihui/xaringan')
-
-# 실행 
-# knit 누를 때는 #처리해줘야 진행됨됨
-# xaringan::inf_mr()
-```
-
