--- a/source/_posts/R_3.md
+++ b/source/_posts/R_3.md
@@ -12,14 +12,30 @@ date: '2022-06-20'
 
 제3장 데이터의 구조
 -
-# 1단원 벡터의 종류 (42p~47p)
+# 1단원 용어의 이해
+
+## 1. 변수
+- 변수: '변하는 수', '자료들을 넣어두는 창고'
+
+## 2. 함수
+- 함수: 데이터를 입력하면 정해진 공식에 따라 특정 과정을 수행하는 기능
+
+## 3. 패키지
+- 패키지: 여러 함수가 들어있는 포장상자.
+- 함수를 사용하기 위해 패키지를 다운, 실행시켜야함.
+- install.packages()
+- library()
+
+# 2단원 데이터 구조 (42p)
+
+## 1. 벡터
 - 벡터 (vector): 1차원의 집합이며, 같은 속성으로만 묶인다
 
-## 1. 숫자형 벡터: 실수로(소수점, 정수 무리수 등 모든 수) 4칙연산 가능, 연속형 데이터
+### 1.1. 숫자형 벡터: 실수로(소수점, 정수 무리수 등 모든 수) 4칙연산 가능, 연속형 데이터
 
-## 2. 정수형 벡터: 숫자형 벡터 中 정수(-1,0,1)로만 구성, 이산형 데이터
+### 1.2. 정수형 벡터: 숫자형 벡터 中 정수(-1,0,1)로만 구성, 이산형 데이터
 
-## 3. 문자형 벡터: 연산 불가
+### 1.3. 문자형 벡터: 연산 불가
 
 ```r
 char_vector <- c("Hi", "Hello")
@@ -43,10 +59,10 @@ class(char_vector) # 벡터의 유형을 알 수 있다.
 #character=char=문자
 ```
 
-## 4. 범주형 벡터
+### 1.4. 범주형 벡터
 - 데이터가 일정 범위나 기준에 따라 유형(성별, 연령대)으로 분류되는 벡터, 이 때 유형을 레벨(level)이라고 한다
 
-### 4.1. 명목형 자료형 벡터 : 데이터 값 비교 불가  (책X)
+#### 1.4.1. 명목형 자료형 벡터 : 데이터 값 비교 불가  (책X)
 
 ```r
 locaiton_vector <- c("서울", "인천", "부산")
@@ -75,7 +91,7 @@ help(factor)
 ## httpd 도움말 서버를 시작합니다 ... 완료
 ```
 
-### 4.2. 순서형 자료형 벡터 : 데이터 값 순서 지정  (책X)
+#### 1.4.2. 순서형 자료형 벡터 : 데이터 값 순서 지정  (책X)
 
 ```r
 temperature_factor <- c("기온높음", 
@@ -122,7 +138,10 @@ class(factor_location_vector) # 비서열
 ## [1] "factor"
 ```
 
-## 5. 논리형 벡터: 참(TRUE),거짓(FALSE) 논리값으로 구성된 베이터. 논리값은 따옴표 없이 대문자로 쓴다
+![Untitled](/images/6_20_class_note(R)/Untitled%206.png)
+
+
+### 1.5. 논리형 벡터: 참(TRUE),거짓(FALSE) 논리값으로 구성된 베이터. 논리값은 따옴표 없이 대문자로 쓴다
 
 ```r
 logical_vector <- c(TRUE, FALSE)
@@ -141,7 +160,7 @@ class(logical_vector)
 ## [1] "logical"
 ```
 
-## 6. 벡터 사용 주의 사항
+### 1.6. 벡터 사용 주의 사항
 - 벡터는 함상 범주가 같아야한다.
 - 만약 속성이 서로 다르다면 상위 속성으로 강제변환 되며 이를 Coercion이라 부름. (논리형 ☞ 숫자형 ☞ 문자형)
 
@@ -189,7 +208,7 @@ c #문자가 아니기 때문에 ""표시가 없음
 ```
 
 
-# 2단원 행렬 (47p) 
+## 2. 행렬
 - 행렬 (Matrix): 행과 열을 갖는 2차원의 구조로, 같은 속성으로만 묶인다
 - 행은 가로 데이터, 열은 세로 데이터
 - 행은 데이터프레임에 들어있는 개별 데이터. R에서는 행을 관측치(observation 약칭 obs.)라고 표현한다.
@@ -197,7 +216,7 @@ c #문자가 아니기 때문에 ""표시가 없음
 - 데이터 분석은 기본적으로 열을 구성하는 변수들의 특성이나 변수 간 관계 등을 알아보는 것.
 
 
-# 3단원 데이터프레임 (47p~54p)
+## 3. 데이터프레임
 - 데이터프레임 (data.frame): 행과 열을 갖는 2차원의 구조로, 다른 속성도 묶인다
 
 ```r
@@ -280,5 +299,5 @@ str(exam)
 ```
 
 
-# 4단원 리스트 (55p~56p)
+## 4. 리스트
 - 리스트(list): 가장 광범위한 객체로써, 벡터, 행렬, 데이터프레임, 리스트도 묶는다
