--- a/source/_posts/R함수 공부하는 방법 e6d8d38b2bc04008ad8f13176beeacd3.md
+++ b/source/_posts/R함수 공부하는 방법 e6d8d38b2bc04008ad8f13176beeacd3.md
@@ -20,7 +20,7 @@ date: '2022-06-17 10:00'
 
 [RStudio > Cheat Sheets> ggplot2]([http://r-statistics.co/Top50-Ggplot2-Visualizations-MasterList-R-Code.html](http://r-statistics.co/Top50-Ggplot2-Visualizations-MasterList-R-Code.html))
 
-![Untitled](images/R함수 공부하는 방법 e6d8d38b2bc04008ad8f13176beeacd3/Untitled.png)
+![Untitled](images/How_to_study_R/Untitled.png)
 
 ---
 
@@ -32,21 +32,21 @@ date: '2022-06-17 10:00'
 
 1. packages 클릭
 
-![Untitled](images/R함수 공부하는 방법 e6d8d38b2bc04008ad8f13176beeacd3/Untitled%201.png)
+![Untitled](images/How_to_study_R/Untitled%201.png)
 
 1. sorted by name 클릭
 
-![Untitled](images/R함수 공부하는 방법 e6d8d38b2bc04008ad8f13176beeacd3/Untitled%202.png)
+![Untitled](images/How_to_study_R/Untitled%202.png)
 
 1. ruference manual: 옆에 클릭하면 패키지 설명 나옴
 
-![Untitled](images/R함수 공부하는 방법 e6d8d38b2bc04008ad8f13176beeacd3/Untitled%203.png)
+![Untitled](images/How_to_study_R/Untitled%203.png)
 
 ---
 
 1. **geom_point** : 코드 설명 보기
 
-![Untitled](images/R함수 공부하는 방법 e6d8d38b2bc04008ad8f13176beeacd3/Untitled%204.png)
+![Untitled](images/How_to_study_R/Untitled%204.png)
 
 **ggplot 예시**
 
@@ -101,7 +101,7 @@ p + geom_point()
 
 **데이터 넣어서 그래프 그리기** (iris 활용)
 
-![Untitled](images/R함수 공부하는 방법 e6d8d38b2bc04008ad8f13176beeacd3/Untitled%205.png)
+![Untitled](images/How_to_study_R/Untitled%205.png)
 
 **코드 해석**
 
@@ -115,12 +115,12 @@ p + geom_point()
 
 geom_point() # 그래프 종류
 
-![Untitled](images/R함수 공부하는 방법 e6d8d38b2bc04008ad8f13176beeacd3/Untitled%206.png)
+![Untitled](images/How_to_study_R/Untitled%206.png)
 
-![Untitled](images/R함수 공부하는 방법 e6d8d38b2bc04008ad8f13176beeacd3/Untitled%207.png)
+![Untitled](images/How_to_study_R/Untitled%207.png)
 
 geom_smooth(method=lm)  # 그래프 종류
 
-![Untitled](images/R함수 공부하는 방법 e6d8d38b2bc04008ad8f13176beeacd3/Untitled%208.png)
+![Untitled](images/How_to_study_R/Untitled%208.png)
 
-![Untitled](images/R함수 공부하는 방법 e6d8d38b2bc04008ad8f13176beeacd3/Untitled%209.png)
+![Untitled](images/How_to_study_R/Untitled%209.png)
