--- a/source/_posts/프로그램 다운로드 설치 72536f08d87d47e9837d3944a9e86bad.md
+++ b/source/_posts/프로그램 다운로드 설치 72536f08d87d47e9837d3944a9e86bad.md
@@ -45,24 +45,24 @@ date: '2022-06-17 02:00'
 
 1. [**vs코드 다운로드](**[https://code.visualstudio.com/](https://code.visualstudio.com/))
 
-![Untitled](images/프로그램 다운로드 설치 72536f08d87d47e9837d3944a9e86bad/Untitled.png)
+![Untitled](images/program_download/Untitled.png)
 
 1. [**아나콘다 설치](**[https://www.anaconda.com/](https://www.anaconda.com/)**)**
 - all users 실행해보고 add anaconda 3~~클릭이 안된다면 → just me 로 실행
 
-![Untitled](images/프로그램 다운로드 설치 72536f08d87d47e9837d3944a9e86bad/Untitled%201.png)
+![Untitled](images/program_download/Untitled%201.png)
 
-![Untitled](images/프로그램 다운로드 설치 72536f08d87d47e9837d3944a9e86bad/Untitled%202.png)
+![Untitled](images/program_download/Untitled%202.png)
 
-![Untitled](images/프로그램 다운로드 설치 72536f08d87d47e9837d3944a9e86bad/Untitled%203.png)
+![Untitled](images/program_download/Untitled%203.png)
 
 - anaconda.navigator 관리자 권한으로 실행 → JupyterLab, Jupyter Notebook 클릭
 
-![Untitled](images/프로그램 다운로드 설치 72536f08d87d47e9837d3944a9e86bad/Untitled%204.png)
+![Untitled](images/program_download/Untitled%204.png)
 
-![Untitled](images/프로그램 다운로드 설치 72536f08d87d47e9837d3944a9e86bad/Untitled%205.png)
+![Untitled](images/program_download/Untitled%205.png)
 
 1. [**파이참 community](**[https://www.jetbrains.com/ko-kr/pycharm/download/#section=windows](https://www.jetbrains.com/ko-kr/pycharm/download/#section=windows))
 - 전체 클릭!!
 
-![Untitled](images/프로그램 다운로드 설치 72536f08d87d47e9837d3944a9e86bad/Untitled%206.png)
+![Untitled](images/program_download/Untitled%206.png)
