--- a/source/_posts/R함수 공부하는 방법 e6d8d38b2bc04008ad8f13176beeacd3.md
+++ b/source/_posts/R함수 공부하는 방법 e6d8d38b2bc04008ad8f13176beeacd3.md
@@ -16,9 +16,11 @@ date: '2022-06-17 10:00'
 
 분석가 희망한다면 추천
 
-[데이터 시각화 교과서]([http://www.yes24.com/Product/Goods/87631760](http://www.yes24.com/Product/Goods/87631760))
+[데이터 시각화 교과서]
+http://www.yes24.com/Product/Goods/87631760
 
-[RStudio > Cheat Sheets> ggplot2]([http://r-statistics.co/Top50-Ggplot2-Visualizations-MasterList-R-Code.html](http://r-statistics.co/Top50-Ggplot2-Visualizations-MasterList-R-Code.html))
+[RStudio > Cheat Sheets> ggplot2]
+http://r-statistics.co/Top50-Ggplot2-Visualizations-MasterList-R-Code.html
 
 ![Untitled](images/How_to_study_R/Untitled.png)
 
