--- a/source/_posts/프로그램 다운로드 설치 72536f08d87d47e9837d3944a9e86bad.md
+++ b/source/_posts/프로그램 다운로드 설치 72536f08d87d47e9837d3944a9e86bad.md
@@ -39,15 +39,19 @@ date: '2022-06-17 02:00'
 
 ### [프로그램 설치]
 
-1. [**R다운로드](**[https://cran.r-project.org/bin/windows/base/](https://cran.r-project.org/bin/windows/base/)**)**
+1. [R다운로드]
+https://cran.r-project.org/bin/windows/base/
 
-1. [**rstudio 다운로드](**[https://www.rstudio.com/products/rstudio/download/](https://www.rstudio.com/products/rstudio/download/))
+2. [rstudio 다운로드]
+https://www.rstudio.com/products/rstudio/download/
 
-1. [**vs코드 다운로드](**[https://code.visualstudio.com/](https://code.visualstudio.com/))
+3. [vs코드 다운로드]
+https://code.visualstudio.com/
 
 ![Untitled](images/program_download/Untitled.png)
 
-1. [**아나콘다 설치](**[https://www.anaconda.com/](https://www.anaconda.com/)**)**
+4. [아나콘다 설치]
+https://www.anaconda.com/
 - all users 실행해보고 add anaconda 3~~클릭이 안된다면 → just me 로 실행
 
 ![Untitled](images/program_download/Untitled%201.png)
@@ -62,7 +66,8 @@ date: '2022-06-17 02:00'
 
 ![Untitled](images/program_download/Untitled%205.png)
 
-1. [**파이참 community](**[https://www.jetbrains.com/ko-kr/pycharm/download/#section=windows](https://www.jetbrains.com/ko-kr/pycharm/download/#section=windows))
+5. [파이참 community]
+https://www.jetbrains.com/ko-kr/pycharm/download/#section=windows
 - 전체 클릭!!
 
 ![Untitled](images/program_download/Untitled%206.png)
