--- a/source/_posts/R_3.md
+++ b/source/_posts/R_3.md
@@ -138,8 +138,10 @@ class(factor_location_vector) # 비서열
 ## [1] "factor"
 ```
 
-![Untitled](/images/6_20_class_note(R)/Untitled%206.png)
-
+![Untitled](images/R_3_files/Untitled 6.png)
+### 범주형 벡터
+- 명목형 자료형 벡터 : 데이터 값 비교 불가
+- 순서형 자료형 벡터 : 데이터 값 순서 지정
 
 ### 1.5. 논리형 벡터: 참(TRUE),거짓(FALSE) 논리값으로 구성된 베이터. 논리값은 따옴표 없이 대문자로 쓴다
 
