--- a/source/_posts/인터넷 없이 가상환경에서 파이썬 사용하는 방법.md
+++ b/source/_posts/인터넷 없이 가상환경에서 파이썬 사용하는 방법.md
@@ -94,3 +94,13 @@ print("seaborn version: ", sns.__version__)
 print("matplotlib version : ", mpl.__version__)
 print("sklearn version : ", mpl.__version__)
 ```
+
+### 8. git bash 터미널 사용
+
+### 파이참을 끄면 JupyterLab도 꺼진다.
+
+### JupyterLab을 사용하는 동안 터미널을 항상 열어 둬야 한다.
+
+![Untitled](images/no_internet_python/Untitled%2015.png)
+
+![Untitled](images/no_internet_python/Untitled%2016.png)
