--- a/source/_posts/가상환경 설치하기.md
+++ b/source/_posts/가상환경 설치하기.md
@@ -18,9 +18,10 @@ cd ..
 mkdir : 파일 생성
 
 ```
-cd home/
-cd human/
-cd airflow/
+cd home
+cd human
+mkdir airflow
+cd airflow
 
 # 모든 파일 삭제
 rm -rf *
@@ -51,11 +52,11 @@ pip3 install 'apache-airflow[postgres, slack, celery]'
 vi ~/.bashrc
 ```
 
-![Untitled](images/Installing a virtual environment/Untitled.png)
+![Untitled](images/Installing_a_virtual_environment/Untitled.png)
 
 ## i를 치면 —INSERT—가 뜬다 (enter가 쳐짐)
 
-![Untitled](images/Installing a virtual environment/Untitled%201.png)
+![Untitled](images/Installing_a_virtual_environment/Untitled%201.png)
 
 ```
 # pwd에서 나온 경로(/mnt/c/dataEngineering)를 복붙한다.
@@ -72,7 +73,7 @@ source venv/bin/activate
 echo $AIRFLOW_HOME # 저장됐는지 확인
 ```
 
-![Untitled](images/Installing a virtual environment/Untitled%202.png)
+![Untitled](images/Installing_a_virtual_environment/Untitled%202.png)
 
 ```
 # 가상환경에 접속한 후!!!!
@@ -112,7 +113,7 @@ code .
 
 ## vscode 실행, 파일 생성 후 버전 확인
 
-![Untitled](images/Installing a virtual environment/Untitled%203.png)
+![Untitled](images/Installing_a_virtual_environment/Untitled%203.png)
 
 ```
 # step1.py
